--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>Formulário-Dark</title>
+    <link rel="shortcut icon" href="img/icons8-form-cloud-96.png" type="image/x-icon">
   </head>
   <body>
     <div class="main-login">
